Fix seeking after redirect

The data length was behing applied to the old UrlData instance instead of the new one after a redirect.
Not knowing the length disables seeking, this CL fixes that and adds a test to prevent the problem from
occuring again.

BUG=606965

Review-Url: https://codereview.chromium.org/1932823002
Cr-Commit-Position: refs/heads/master@{#390498}

Former-commit-id: 1fed486149cdfb7ad37fe474e3ab78d62cab42db