media/blink/resource_multibuffer_data_provider.h
@@ -89,7 +89,8 @@ class MEDIA_BLINK_EXPORT ResourceMultiBufferDataProvider
   int64_t block_size() const;
 
   // If we have made a range request, verify the response from the server.
-  bool VerifyPartialResponse(const blink::WebURLResponse& response);
+  bool VerifyPartialResponse(const blink::WebURLResponse& response,
+                             const scoped_refptr<UrlData>& url_data);
 
   // Current Position.
   MultiBufferBlockId pos_;
